fixing alignment

--- a/css/main.css
+++ b/css/main.css
@@ -177,12 +177,16 @@ body{
 #after_after_party .col-md-3{
 	margin-bottom:20px;
 }
-.single_techstar_companies{
-	height:190px;
-	padding-left: 20px;
-	padding-right: 20px;
+
+@media screen and (min-width: 769px) {
+	.single_techstar_companies{
+		height:190px;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+	.single_techstar_companies img{
+		height:88px;
+	}
 }
 
-.single_techstar_companies img{
-	height:88px;
-}
+
